--- a/frontend/groupomaniaspa/public/index.html
+++ b/frontend/groupomaniaspa/public/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    Groupomania Social Network
   </title>
   <script src="https://kit.fontawesome.com/278b17786f.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="width:100%; box-sizing:border-box; margin:0; ">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
